--- a/src/processing.ipynb
+++ b/src/processing.ipynb
@@ -10,6 +10,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "Downloading https://github.com/kimiyoung/planetoid/raw/master/data/ind.cora.x\n",
+      "Downloading https://github.com/kimiyoung/planetoid/raw/master/data/ind.cora.tx\n",
+      "Downloading https://github.com/kimiyoung/planetoid/raw/master/data/ind.cora.allx\n",
+      "Downloading https://github.com/kimiyoung/planetoid/raw/master/data/ind.cora.y\n",
+      "Downloading https://github.com/kimiyoung/planetoid/raw/master/data/ind.cora.ty\n",
+      "Downloading https://github.com/kimiyoung/planetoid/raw/master/data/ind.cora.ally\n",
+      "Downloading https://github.com/kimiyoung/planetoid/raw/master/data/ind.cora.graph\n",
+      "Downloading https://github.com/kimiyoung/planetoid/raw/master/data/ind.cora.test.index\n",
+      "Processing...\n",
+      "Done!\n",
       "d:\\Visual Code\\GNN\\venv\\Lib\\site-packages\\torch_geometric\\deprecation.py:26: UserWarning: 'train_test_split_edges' is deprecated, use 'transforms.RandomLinkSplit' instead\n",
       "  warnings.warn(out)\n"
      ]
@@ -18,16 +28,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 010, Loss: 0.6280, Val AUC: 0.6254, Test AUC: 0.6299\n",
-      "Epoch 020, Loss: 0.5568, Val AUC: 0.6523, Test AUC: 0.6584\n",
-      "Epoch 030, Loss: 0.4153, Val AUC: 0.7188, Test AUC: 0.7444\n",
-      "Epoch 040, Loss: 0.3071, Val AUC: 0.7957, Test AUC: 0.7993\n",
-      "Epoch 050, Loss: 0.2874, Val AUC: 0.8061, Test AUC: 0.8025\n",
-      "Epoch 060, Loss: 0.2351, Val AUC: 0.8162, Test AUC: 0.8133\n",
-      "Epoch 070, Loss: 0.2007, Val AUC: 0.8298, Test AUC: 0.8258\n",
-      "Epoch 080, Loss: 0.1919, Val AUC: 0.8391, Test AUC: 0.8370\n",
-      "Epoch 090, Loss: 0.1556, Val AUC: 0.8383, Test AUC: 0.8360\n",
-      "Epoch 100, Loss: 0.1356, Val AUC: 0.8401, Test AUC: 0.8435\n",
+      "Epoch 010, Loss: 0.6276, Val AUC: 0.6331, Test AUC: 0.6202\n",
+      "Epoch 020, Loss: 0.5101, Val AUC: 0.7674, Test AUC: 0.7418\n",
+      "Epoch 030, Loss: 0.3537, Val AUC: 0.8298, Test AUC: 0.8221\n",
+      "Epoch 040, Loss: 0.2803, Val AUC: 0.8417, Test AUC: 0.8514\n",
+      "Epoch 050, Loss: 0.2376, Val AUC: 0.8364, Test AUC: 0.8512\n",
+      "Epoch 060, Loss: 0.1986, Val AUC: 0.8508, Test AUC: 0.8616\n",
+      "Epoch 070, Loss: 0.1741, Val AUC: 0.8645, Test AUC: 0.8713\n",
+      "Epoch 080, Loss: 0.1564, Val AUC: 0.8657, Test AUC: 0.8710\n",
+      "Epoch 090, Loss: 0.1517, Val AUC: 0.8667, Test AUC: 0.8729\n",
+      "Epoch 100, Loss: 0.1491, Val AUC: 0.8648, Test AUC: 0.8705\n",
       "\n",
       "\n"
      ]
@@ -50,6 +60,7 @@
     "# -----------------------------\n",
     "# 1. Carregar Dataset\n",
     "# -----------------------------\n",
+    "os.makedirs(\"../datasets\", exist_ok=True)\n",
     "dataset = Planetoid(root=\"../datasets/Cora\", name=\"Cora\")\n",
     "data = dataset[0]\n",
     "\n",
