--- a/src/dataset.ipynb
+++ b/src/dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "f38e8fb4",
    "metadata": {},
    "outputs": [
@@ -123,13 +123,13 @@
     "\n",
     "print(\"\\nArquivos gerados:\")\n",
     "print(f\"- Nós: {nodes_path}\")\n",
-    "print(f\"- Arestas: {edges_path}\")\n"
+    "print(f\"- Arestas: {edges_path}\")"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv (3.12.4)",
+   "display_name": "venv (3.9.6)",
    "language": "python",
    "name": "python3"
   },
@@ -143,7 +143,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
