--- a/src/inference.ipynb
+++ b/src/inference.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "f9f85c10",
    "metadata": {},
    "outputs": [
@@ -10,9 +10,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Aresta (0, 42): Classe prevista = alta, Probs = {'baixa': 0.16348615288734436, 'media': 0.30737483501434326, 'alta': 0.5291390419006348}\n",
-      "Aresta (10, 77): Classe prevista = baixa, Probs = {'baixa': 0.5921938419342041, 'media': 0.37382060289382935, 'alta': 0.033985577523708344}\n",
-      "Aresta (23, 59): Classe prevista = alta, Probs = {'baixa': 0.3679486811161041, 'media': 0.18057215213775635, 'alta': 0.4514791965484619}\n"
+      "Aresta (0, 42): Classe prevista = baixa, Probs = {'baixa': 0.3470420837402344, 'media': 0.32766133546829224, 'alta': 0.325296550989151}\n",
+      "Aresta (10, 77): Classe prevista = baixa, Probs = {'baixa': 0.40168076753616333, 'media': 0.35262376070022583, 'alta': 0.24569548666477203}\n",
+      "Aresta (23, 59): Classe prevista = media, Probs = {'baixa': 0.309682697057724, 'media': 0.6305679678916931, 'alta': 0.05974934622645378}\n"
      ]
     }
    ],
@@ -114,15 +114,27 @@
     "outputs = classify_edges(pares)\n",
     "\n",
     "for o in outputs:\n",
-    "    print(f\"Aresta ({o['src']}, {o['dst']}): Classe prevista = {o['pred_label']}, Probs = {o['probs']}\")\n",
-    "\n",
-    "\n"
+    "    print(f\"Aresta ({o['src']}, {o['dst']}): Classe prevista = {o['pred_label']}, Probs = {o['probs']}\")"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "venv (3.9.6)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
