--- a/src/processing.ipynb
+++ b/src/processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "id": "1cc3efe8",
    "metadata": {},
    "outputs": [
@@ -10,109 +10,109 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 005 | Loss: 1.1087 | Test Acc: 0.3833 | Test F1: 0.1847\n",
-      "Epoch 010 | Loss: 1.0980 | Test Acc: 0.2944 | Test F1: 0.1516\n",
-      "Epoch 015 | Loss: 1.0988 | Test Acc: 0.2944 | Test F1: 0.1621\n",
-      "Epoch 020 | Loss: 1.0975 | Test Acc: 0.3278 | Test F1: 0.1760\n",
-      "Epoch 025 | Loss: 1.0964 | Test Acc: 0.3056 | Test F1: 0.2241\n",
-      "Epoch 030 | Loss: 1.0960 | Test Acc: 0.2833 | Test F1: 0.1478\n",
-      "Epoch 035 | Loss: 1.0951 | Test Acc: 0.2833 | Test F1: 0.1736\n",
-      "Epoch 040 | Loss: 1.0937 | Test Acc: 0.3167 | Test F1: 0.2526\n",
-      "Epoch 045 | Loss: 1.0921 | Test Acc: 0.2833 | Test F1: 0.2287\n",
-      "Epoch 050 | Loss: 1.0904 | Test Acc: 0.3000 | Test F1: 0.2369\n",
-      "Epoch 055 | Loss: 1.0881 | Test Acc: 0.2944 | Test F1: 0.2396\n",
-      "Epoch 060 | Loss: 1.0854 | Test Acc: 0.3111 | Test F1: 0.2533\n",
-      "Epoch 065 | Loss: 1.0819 | Test Acc: 0.2889 | Test F1: 0.2625\n",
-      "Epoch 070 | Loss: 1.0792 | Test Acc: 0.2944 | Test F1: 0.2628\n",
-      "Epoch 075 | Loss: 1.0771 | Test Acc: 0.2944 | Test F1: 0.2677\n",
-      "Epoch 080 | Loss: 1.0743 | Test Acc: 0.2889 | Test F1: 0.2581\n",
-      "Epoch 085 | Loss: 1.0714 | Test Acc: 0.3000 | Test F1: 0.2706\n",
-      "Epoch 090 | Loss: 1.0683 | Test Acc: 0.2778 | Test F1: 0.2524\n",
-      "Epoch 095 | Loss: 1.0645 | Test Acc: 0.2889 | Test F1: 0.2728\n",
-      "Epoch 100 | Loss: 1.0602 | Test Acc: 0.2944 | Test F1: 0.2807\n",
-      "Epoch 105 | Loss: 1.0563 | Test Acc: 0.3111 | Test F1: 0.2982\n",
-      "Epoch 110 | Loss: 1.0527 | Test Acc: 0.3056 | Test F1: 0.2933\n",
-      "Epoch 115 | Loss: 1.0496 | Test Acc: 0.2889 | Test F1: 0.2680\n",
-      "Epoch 120 | Loss: 1.0457 | Test Acc: 0.3056 | Test F1: 0.2912\n",
-      "Epoch 125 | Loss: 1.0425 | Test Acc: 0.2889 | Test F1: 0.2767\n",
-      "Epoch 130 | Loss: 1.0396 | Test Acc: 0.3056 | Test F1: 0.2988\n",
-      "Epoch 135 | Loss: 1.0363 | Test Acc: 0.3167 | Test F1: 0.3047\n",
-      "Epoch 140 | Loss: 1.0321 | Test Acc: 0.3000 | Test F1: 0.2940\n",
-      "Epoch 145 | Loss: 1.0276 | Test Acc: 0.3056 | Test F1: 0.2947\n",
-      "Epoch 150 | Loss: 1.0237 | Test Acc: 0.2833 | Test F1: 0.2718\n",
-      "Epoch 155 | Loss: 1.0199 | Test Acc: 0.2833 | Test F1: 0.2719\n",
-      "Epoch 160 | Loss: 1.0163 | Test Acc: 0.2722 | Test F1: 0.2624\n",
-      "Epoch 165 | Loss: 1.0129 | Test Acc: 0.2556 | Test F1: 0.2458\n",
-      "Epoch 170 | Loss: 1.0098 | Test Acc: 0.2667 | Test F1: 0.2550\n",
-      "Epoch 175 | Loss: 1.0069 | Test Acc: 0.2667 | Test F1: 0.2567\n",
-      "Epoch 180 | Loss: 1.0043 | Test Acc: 0.2889 | Test F1: 0.2802\n",
-      "Epoch 185 | Loss: 1.0018 | Test Acc: 0.2778 | Test F1: 0.2709\n",
-      "Epoch 190 | Loss: 0.9991 | Test Acc: 0.2833 | Test F1: 0.2753\n",
-      "Epoch 195 | Loss: 0.9952 | Test Acc: 0.2944 | Test F1: 0.2873\n",
-      "Epoch 200 | Loss: 0.9929 | Test Acc: 0.3000 | Test F1: 0.2946\n",
-      "Epoch 205 | Loss: 0.9898 | Test Acc: 0.2889 | Test F1: 0.2826\n",
-      "Epoch 210 | Loss: 0.9879 | Test Acc: 0.3000 | Test F1: 0.2945\n",
-      "Epoch 215 | Loss: 0.9859 | Test Acc: 0.3056 | Test F1: 0.3015\n",
-      "Epoch 220 | Loss: 0.9846 | Test Acc: 0.2944 | Test F1: 0.2888\n",
-      "Epoch 225 | Loss: 0.9835 | Test Acc: 0.3056 | Test F1: 0.2984\n",
-      "Epoch 230 | Loss: 0.9825 | Test Acc: 0.3111 | Test F1: 0.3051\n",
-      "Epoch 235 | Loss: 0.9816 | Test Acc: 0.3056 | Test F1: 0.3003\n",
-      "Epoch 240 | Loss: 0.9809 | Test Acc: 0.3111 | Test F1: 0.3051\n",
-      "Epoch 245 | Loss: 0.9802 | Test Acc: 0.3111 | Test F1: 0.3051\n",
-      "Epoch 250 | Loss: 0.9802 | Test Acc: 0.3000 | Test F1: 0.2934\n",
-      "Epoch 255 | Loss: 0.9790 | Test Acc: 0.3167 | Test F1: 0.3096\n",
-      "Epoch 260 | Loss: 0.9779 | Test Acc: 0.3056 | Test F1: 0.2987\n",
-      "Epoch 265 | Loss: 0.9770 | Test Acc: 0.3000 | Test F1: 0.2946\n",
-      "Epoch 270 | Loss: 0.9772 | Test Acc: 0.3000 | Test F1: 0.2930\n",
-      "Epoch 275 | Loss: 0.9759 | Test Acc: 0.3056 | Test F1: 0.3000\n",
-      "Epoch 280 | Loss: 0.9752 | Test Acc: 0.3167 | Test F1: 0.3103\n",
-      "Epoch 285 | Loss: 0.9747 | Test Acc: 0.2833 | Test F1: 0.2756\n",
-      "Epoch 290 | Loss: 0.9737 | Test Acc: 0.2833 | Test F1: 0.2745\n",
-      "Epoch 295 | Loss: 0.9738 | Test Acc: 0.3056 | Test F1: 0.2950\n",
-      "Epoch 300 | Loss: 0.9737 | Test Acc: 0.3111 | Test F1: 0.3040\n",
-      "Epoch 305 | Loss: 0.9717 | Test Acc: 0.2944 | Test F1: 0.2902\n",
-      "Epoch 310 | Loss: 0.9703 | Test Acc: 0.3000 | Test F1: 0.2949\n",
-      "Epoch 315 | Loss: 0.9694 | Test Acc: 0.2833 | Test F1: 0.2811\n",
-      "Epoch 320 | Loss: 0.9687 | Test Acc: 0.2833 | Test F1: 0.2807\n",
-      "Epoch 325 | Loss: 0.9667 | Test Acc: 0.3111 | Test F1: 0.3070\n",
-      "Epoch 330 | Loss: 0.9660 | Test Acc: 0.3056 | Test F1: 0.3021\n",
-      "Epoch 335 | Loss: 0.9651 | Test Acc: 0.3111 | Test F1: 0.3082\n",
-      "Epoch 340 | Loss: 0.9642 | Test Acc: 0.3056 | Test F1: 0.3006\n",
-      "Epoch 345 | Loss: 0.9628 | Test Acc: 0.3000 | Test F1: 0.2939\n",
-      "Epoch 350 | Loss: 0.9621 | Test Acc: 0.3056 | Test F1: 0.2992\n",
-      "Epoch 355 | Loss: 0.9615 | Test Acc: 0.2889 | Test F1: 0.2841\n",
-      "Epoch 360 | Loss: 0.9609 | Test Acc: 0.3111 | Test F1: 0.3043\n",
-      "Epoch 365 | Loss: 0.9611 | Test Acc: 0.3111 | Test F1: 0.3043\n",
-      "Epoch 370 | Loss: 0.9601 | Test Acc: 0.3000 | Test F1: 0.2945\n",
-      "Epoch 375 | Loss: 0.9599 | Test Acc: 0.3056 | Test F1: 0.2992\n",
-      "Epoch 380 | Loss: 0.9600 | Test Acc: 0.3000 | Test F1: 0.2945\n",
-      "Epoch 385 | Loss: 0.9601 | Test Acc: 0.3000 | Test F1: 0.2942\n",
-      "Epoch 390 | Loss: 0.9585 | Test Acc: 0.2889 | Test F1: 0.2842\n",
-      "Epoch 395 | Loss: 0.9600 | Test Acc: 0.2889 | Test F1: 0.2846\n",
-      "Epoch 400 | Loss: 0.9583 | Test Acc: 0.2944 | Test F1: 0.2891\n",
-      "Epoch 405 | Loss: 0.9580 | Test Acc: 0.3000 | Test F1: 0.2943\n",
-      "Epoch 410 | Loss: 0.9582 | Test Acc: 0.2833 | Test F1: 0.2791\n",
-      "Epoch 415 | Loss: 0.9573 | Test Acc: 0.3056 | Test F1: 0.2987\n",
-      "Epoch 420 | Loss: 0.9571 | Test Acc: 0.3000 | Test F1: 0.2958\n",
-      "Epoch 425 | Loss: 0.9563 | Test Acc: 0.2944 | Test F1: 0.2881\n",
-      "Epoch 430 | Loss: 0.9568 | Test Acc: 0.3000 | Test F1: 0.2974\n",
-      "Epoch 435 | Loss: 0.9561 | Test Acc: 0.3056 | Test F1: 0.2968\n",
-      "Epoch 440 | Loss: 0.9578 | Test Acc: 0.3056 | Test F1: 0.3006\n",
-      "Epoch 445 | Loss: 0.9568 | Test Acc: 0.2889 | Test F1: 0.2843\n",
-      "Epoch 450 | Loss: 0.9557 | Test Acc: 0.3111 | Test F1: 0.3037\n",
-      "Epoch 455 | Loss: 0.9554 | Test Acc: 0.3056 | Test F1: 0.2992\n",
-      "Epoch 460 | Loss: 0.9548 | Test Acc: 0.2833 | Test F1: 0.2799\n",
-      "Epoch 465 | Loss: 0.9545 | Test Acc: 0.2944 | Test F1: 0.2891\n",
-      "Epoch 470 | Loss: 0.9541 | Test Acc: 0.3167 | Test F1: 0.3088\n",
-      "Epoch 475 | Loss: 0.9545 | Test Acc: 0.3056 | Test F1: 0.2993\n",
-      "Epoch 480 | Loss: 0.9544 | Test Acc: 0.2944 | Test F1: 0.2893\n",
-      "Epoch 485 | Loss: 0.9532 | Test Acc: 0.2944 | Test F1: 0.2892\n",
-      "Epoch 490 | Loss: 0.9531 | Test Acc: 0.2889 | Test F1: 0.2803\n",
-      "Epoch 495 | Loss: 0.9533 | Test Acc: 0.2833 | Test F1: 0.2775\n",
-      "Modelo salvo em ../models/gcn_state.json\n",
-      "Modelo salvo em ../models/predictor_state.json\n",
-      "Modelo salvo em ../models/meta.json\n",
-      "Modelo salvo em ../models/graph_artifacts.json\n",
+      "Epoch 005 | Loss: 1.1018 | Test Acc: 0.3833 | Test F1: 0.1847\n",
+      "Epoch 010 | Loss: 1.0984 | Test Acc: 0.2889 | Test F1: 0.2236\n",
+      "Epoch 015 | Loss: 1.0982 | Test Acc: 0.2944 | Test F1: 0.1516\n",
+      "Epoch 020 | Loss: 1.0964 | Test Acc: 0.2944 | Test F1: 0.1516\n",
+      "Epoch 025 | Loss: 1.0959 | Test Acc: 0.3111 | Test F1: 0.2183\n",
+      "Epoch 030 | Loss: 1.0939 | Test Acc: 0.2889 | Test F1: 0.2255\n",
+      "Epoch 035 | Loss: 1.0913 | Test Acc: 0.3000 | Test F1: 0.2356\n",
+      "Epoch 040 | Loss: 1.0878 | Test Acc: 0.2778 | Test F1: 0.2266\n",
+      "Epoch 045 | Loss: 1.0843 | Test Acc: 0.2889 | Test F1: 0.2635\n",
+      "Epoch 050 | Loss: 1.0813 | Test Acc: 0.3000 | Test F1: 0.2996\n",
+      "Epoch 055 | Loss: 1.0791 | Test Acc: 0.2833 | Test F1: 0.2738\n",
+      "Epoch 060 | Loss: 1.0769 | Test Acc: 0.3000 | Test F1: 0.2837\n",
+      "Epoch 065 | Loss: 1.0741 | Test Acc: 0.2944 | Test F1: 0.2763\n",
+      "Epoch 070 | Loss: 1.0710 | Test Acc: 0.3222 | Test F1: 0.3076\n",
+      "Epoch 075 | Loss: 1.0673 | Test Acc: 0.3222 | Test F1: 0.3137\n",
+      "Epoch 080 | Loss: 1.0631 | Test Acc: 0.3111 | Test F1: 0.3011\n",
+      "Epoch 085 | Loss: 1.0589 | Test Acc: 0.3222 | Test F1: 0.3094\n",
+      "Epoch 090 | Loss: 1.0552 | Test Acc: 0.3056 | Test F1: 0.2937\n",
+      "Epoch 095 | Loss: 1.0499 | Test Acc: 0.3056 | Test F1: 0.2799\n",
+      "Epoch 100 | Loss: 1.0450 | Test Acc: 0.3167 | Test F1: 0.3001\n",
+      "Epoch 105 | Loss: 1.0407 | Test Acc: 0.3000 | Test F1: 0.2759\n",
+      "Epoch 110 | Loss: 1.0358 | Test Acc: 0.2889 | Test F1: 0.2526\n",
+      "Epoch 115 | Loss: 1.0306 | Test Acc: 0.2889 | Test F1: 0.2500\n",
+      "Epoch 120 | Loss: 1.0251 | Test Acc: 0.2889 | Test F1: 0.2443\n",
+      "Epoch 125 | Loss: 1.0177 | Test Acc: 0.3056 | Test F1: 0.2719\n",
+      "Epoch 130 | Loss: 1.0104 | Test Acc: 0.3222 | Test F1: 0.3016\n",
+      "Epoch 135 | Loss: 1.0042 | Test Acc: 0.3222 | Test F1: 0.2993\n",
+      "Epoch 140 | Loss: 0.9970 | Test Acc: 0.3111 | Test F1: 0.2940\n",
+      "Epoch 145 | Loss: 0.9915 | Test Acc: 0.3167 | Test F1: 0.3006\n",
+      "Epoch 150 | Loss: 0.9851 | Test Acc: 0.3222 | Test F1: 0.2855\n",
+      "Epoch 155 | Loss: 0.9800 | Test Acc: 0.3389 | Test F1: 0.3193\n",
+      "Epoch 160 | Loss: 0.9752 | Test Acc: 0.3056 | Test F1: 0.3002\n",
+      "Epoch 165 | Loss: 0.9702 | Test Acc: 0.3167 | Test F1: 0.2849\n",
+      "Epoch 170 | Loss: 0.9641 | Test Acc: 0.3056 | Test F1: 0.2695\n",
+      "Epoch 175 | Loss: 0.9587 | Test Acc: 0.3056 | Test F1: 0.2743\n",
+      "Epoch 180 | Loss: 0.9529 | Test Acc: 0.3056 | Test F1: 0.2733\n",
+      "Epoch 185 | Loss: 0.9472 | Test Acc: 0.3000 | Test F1: 0.2971\n",
+      "Epoch 190 | Loss: 0.9413 | Test Acc: 0.3000 | Test F1: 0.2972\n",
+      "Epoch 195 | Loss: 0.9370 | Test Acc: 0.3056 | Test F1: 0.3024\n",
+      "Epoch 200 | Loss: 0.9325 | Test Acc: 0.3111 | Test F1: 0.3075\n",
+      "Epoch 205 | Loss: 0.9290 | Test Acc: 0.3111 | Test F1: 0.3073\n",
+      "Epoch 210 | Loss: 0.9251 | Test Acc: 0.3222 | Test F1: 0.3172\n",
+      "Epoch 215 | Loss: 0.9213 | Test Acc: 0.3000 | Test F1: 0.2958\n",
+      "Epoch 220 | Loss: 0.9182 | Test Acc: 0.2944 | Test F1: 0.2907\n",
+      "Epoch 225 | Loss: 0.9175 | Test Acc: 0.3056 | Test F1: 0.2962\n",
+      "Epoch 230 | Loss: 0.9158 | Test Acc: 0.2889 | Test F1: 0.2832\n",
+      "Epoch 235 | Loss: 0.9108 | Test Acc: 0.2944 | Test F1: 0.2915\n",
+      "Epoch 240 | Loss: 0.9114 | Test Acc: 0.2778 | Test F1: 0.2517\n",
+      "Epoch 245 | Loss: 0.9062 | Test Acc: 0.2833 | Test F1: 0.2609\n",
+      "Epoch 250 | Loss: 0.9044 | Test Acc: 0.2889 | Test F1: 0.2653\n",
+      "Epoch 255 | Loss: 0.9026 | Test Acc: 0.2889 | Test F1: 0.2653\n",
+      "Epoch 260 | Loss: 0.9008 | Test Acc: 0.2889 | Test F1: 0.2654\n",
+      "Epoch 265 | Loss: 0.8996 | Test Acc: 0.2833 | Test F1: 0.2575\n",
+      "Epoch 270 | Loss: 0.8982 | Test Acc: 0.2778 | Test F1: 0.2537\n",
+      "Epoch 275 | Loss: 0.8973 | Test Acc: 0.2833 | Test F1: 0.2649\n",
+      "Epoch 280 | Loss: 0.8954 | Test Acc: 0.2778 | Test F1: 0.2594\n",
+      "Epoch 285 | Loss: 0.8938 | Test Acc: 0.2944 | Test F1: 0.2850\n",
+      "Epoch 290 | Loss: 0.8920 | Test Acc: 0.2889 | Test F1: 0.2806\n",
+      "Epoch 295 | Loss: 0.8911 | Test Acc: 0.3111 | Test F1: 0.3013\n",
+      "Epoch 300 | Loss: 0.8899 | Test Acc: 0.3167 | Test F1: 0.3060\n",
+      "Epoch 305 | Loss: 0.8875 | Test Acc: 0.3111 | Test F1: 0.3008\n",
+      "Epoch 310 | Loss: 0.8850 | Test Acc: 0.3111 | Test F1: 0.3011\n",
+      "Epoch 315 | Loss: 0.8858 | Test Acc: 0.3111 | Test F1: 0.3010\n",
+      "Epoch 320 | Loss: 0.8861 | Test Acc: 0.3111 | Test F1: 0.3010\n",
+      "Epoch 325 | Loss: 0.8824 | Test Acc: 0.3167 | Test F1: 0.3055\n",
+      "Epoch 330 | Loss: 0.8822 | Test Acc: 0.3167 | Test F1: 0.3077\n",
+      "Epoch 335 | Loss: 0.8791 | Test Acc: 0.3167 | Test F1: 0.3077\n",
+      "Epoch 340 | Loss: 0.8783 | Test Acc: 0.3167 | Test F1: 0.3078\n",
+      "Epoch 345 | Loss: 0.8766 | Test Acc: 0.3167 | Test F1: 0.3069\n",
+      "Epoch 350 | Loss: 0.8752 | Test Acc: 0.3167 | Test F1: 0.3069\n",
+      "Epoch 355 | Loss: 0.8759 | Test Acc: 0.3278 | Test F1: 0.3146\n",
+      "Epoch 360 | Loss: 0.8743 | Test Acc: 0.3389 | Test F1: 0.3236\n",
+      "Epoch 365 | Loss: 0.8739 | Test Acc: 0.3333 | Test F1: 0.3210\n",
+      "Epoch 370 | Loss: 0.8727 | Test Acc: 0.3222 | Test F1: 0.3118\n",
+      "Epoch 375 | Loss: 0.8720 | Test Acc: 0.3167 | Test F1: 0.3050\n",
+      "Epoch 380 | Loss: 0.8718 | Test Acc: 0.3222 | Test F1: 0.3097\n",
+      "Epoch 385 | Loss: 0.8706 | Test Acc: 0.3222 | Test F1: 0.3081\n",
+      "Epoch 390 | Loss: 0.8689 | Test Acc: 0.3278 | Test F1: 0.3150\n",
+      "Epoch 395 | Loss: 0.8685 | Test Acc: 0.3111 | Test F1: 0.2990\n",
+      "Epoch 400 | Loss: 0.8670 | Test Acc: 0.3167 | Test F1: 0.3050\n",
+      "Epoch 405 | Loss: 0.8674 | Test Acc: 0.3111 | Test F1: 0.2975\n",
+      "Epoch 410 | Loss: 0.8675 | Test Acc: 0.3111 | Test F1: 0.2990\n",
+      "Epoch 415 | Loss: 0.8675 | Test Acc: 0.3167 | Test F1: 0.3050\n",
+      "Epoch 420 | Loss: 0.8679 | Test Acc: 0.3111 | Test F1: 0.2991\n",
+      "Epoch 425 | Loss: 0.8647 | Test Acc: 0.3167 | Test F1: 0.3036\n",
+      "Epoch 430 | Loss: 0.8629 | Test Acc: 0.3222 | Test F1: 0.3108\n",
+      "Epoch 435 | Loss: 0.8616 | Test Acc: 0.3167 | Test F1: 0.3001\n",
+      "Epoch 440 | Loss: 0.8611 | Test Acc: 0.3222 | Test F1: 0.3085\n",
+      "Epoch 445 | Loss: 0.8586 | Test Acc: 0.3278 | Test F1: 0.3154\n",
+      "Epoch 450 | Loss: 0.8577 | Test Acc: 0.3222 | Test F1: 0.3045\n",
+      "Epoch 455 | Loss: 0.8570 | Test Acc: 0.3167 | Test F1: 0.2996\n",
+      "Epoch 460 | Loss: 0.8562 | Test Acc: 0.3167 | Test F1: 0.2996\n",
+      "Epoch 465 | Loss: 0.8550 | Test Acc: 0.3222 | Test F1: 0.3060\n",
+      "Epoch 470 | Loss: 0.8542 | Test Acc: 0.3222 | Test F1: 0.3085\n",
+      "Epoch 475 | Loss: 0.8564 | Test Acc: 0.3056 | Test F1: 0.2891\n",
+      "Epoch 480 | Loss: 0.8544 | Test Acc: 0.3111 | Test F1: 0.2964\n",
+      "Epoch 485 | Loss: 0.8533 | Test Acc: 0.3222 | Test F1: 0.3055\n",
+      "Epoch 490 | Loss: 0.8522 | Test Acc: 0.3056 | Test F1: 0.2891\n",
+      "Epoch 495 | Loss: 0.8512 | Test Acc: 0.3222 | Test F1: 0.3051\n",
+      "Modelo salvo em ../models/gcn_state.pt\n",
+      "Modelo salvo em ../models/predictor_state.pt\n",
+      "Modelo salvo em ../models/meta.pt\n",
+      "Modelo salvo em ../models/graph_artifacts.pt\n",
       "Métricas salvas em ../results/result.json\n"
      ]
     }
@@ -121,6 +121,7 @@
     "# -----------------------------\n",
     "# 0. Carregar Dependências\n",
     "# -----------------------------\n",
+    "import os\n",
     "import pandas as pd\n",
     "import torch\n",
     "import torch.nn as nn\n",
@@ -270,10 +271,10 @@
     "    \"adj_norm\": adj_norm.cpu() # adjacência normalizada\n",
     "}, ckpt_graph)\n",
     "\n",
-    "print(\"Modelo salvo em ../models/gcn_state.json\")\n",
-    "print(\"Modelo salvo em ../models/predictor_state.json\")\n",
-    "print(\"Modelo salvo em ../models/meta.json\")\n",
-    "print(\"Modelo salvo em ../models/graph_artifacts.json\")\n",
+    "print(\"Modelo salvo em ../models/gcn_state.pt\")\n",
+    "print(\"Modelo salvo em ../models/predictor_state.pt\")\n",
+    "print(\"Modelo salvo em ../models/meta.pt\")\n",
+    "print(\"Modelo salvo em ../models/graph_artifacts.pt\")\n",
     "\n",
     "# -----------------------------\n",
     "# 7. Métricas adicionais \n",
@@ -362,8 +363,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "venv (3.9.6)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
