--- a/src/inference.ipynb
+++ b/src/inference.ipynb
@@ -2,14 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": null,
-   "id": "f9f85c10",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-=======
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "f9f85c10",
    "metadata": {},
    "outputs": [
@@ -17,9 +10,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Aresta (0, 42): Classe prevista = baixa, Probs = {'baixa': 0.3470420837402344, 'media': 0.32766133546829224, 'alta': 0.325296550989151}\n",
-      "Aresta (10, 77): Classe prevista = baixa, Probs = {'baixa': 0.40168076753616333, 'media': 0.35262376070022583, 'alta': 0.24569548666477203}\n",
-      "Aresta (23, 59): Classe prevista = media, Probs = {'baixa': 0.309682697057724, 'media': 0.6305679678916931, 'alta': 0.05974934622645378}\n"
+      "Aresta (2582, 0) -> Classe prevista: 0 | Probs: [0.5618619322776794, 0.43813806772232056]\n",
+      "Aresta (2, 1) -> Classe prevista: 1 | Probs: [0.4427374005317688, 0.5572625994682312]\n",
+      "Aresta (652, 1) -> Classe prevista: 1 | Probs: [0.17754071950912476, 0.82245934009552]\n"
      ]
     }
    ],
@@ -31,116 +24,119 @@
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
+    "from torch_geometric.nn import GCNConv\n",
     "\n",
     "# -----------------------------\n",
-    "# 1. Definir modelos\n",
+    "# 1. Definir Modelo\n",
     "# -----------------------------\n",
-    "class SimpleGCN(nn.Module):\n",
+    "class GCN(nn.Module):\n",
+    "    def __init__(self, in_channels, hidden_channels):\n",
+    "        super(GCN, self).__init__()\n",
+    "        self.conv1 = GCNConv(in_channels, hidden_channels)\n",
+    "        self.conv2 = GCNConv(hidden_channels, hidden_channels)\n",
+    "\n",
+    "    def forward(self, x, edge_index):\n",
+    "        x = self.conv1(x, edge_index)\n",
+    "        x = F.relu(x)\n",
+    "        x = F.dropout(x, training=self.training)\n",
+    "        x = self.conv2(x, edge_index)\n",
+    "        return x   # embeddings de nós\n",
+    "\n",
+    "class EdgeClassifier(nn.Module):\n",
     "    def __init__(self, in_channels, hidden_channels, out_channels):\n",
-    "        super().__init__()\n",
-    "        self.fc1 = nn.Linear(in_channels, hidden_channels)\n",
-    "        self.fc2 = nn.Linear(hidden_channels, out_channels)\n",
-    "        \n",
-    "    def forward(self, x, adj):\n",
-    "        h = torch.matmul(adj, x)   # agregação\n",
-    "        h = F.relu(self.fc1(h))\n",
-    "        h = torch.matmul(adj, h)\n",
-    "        h = self.fc2(h)\n",
-    "        return h\n",
+    "        super(EdgeClassifier, self).__init__()\n",
+    "        self.gcn = GCN(in_channels, hidden_channels)\n",
+    "        self.mlp = nn.Sequential(\n",
+    "            nn.Linear(2 * hidden_channels, hidden_channels),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(hidden_channels, out_channels)\n",
+    "        )\n",
     "\n",
-    "class LinkPredictor(nn.Module):\n",
-    "    def __init__(self, in_channels, hidden_channels, num_classes=3):\n",
-    "        super().__init__()\n",
-    "        self.lin1 = nn.Linear(in_channels * 2, hidden_channels)\n",
-    "        self.lin2 = nn.Linear(hidden_channels, num_classes)\n",
-    "        \n",
-    "    def forward(self, x_i, x_j):\n",
-    "        z = torch.cat([x_i, x_j], dim=-1)\n",
-    "        z = F.relu(self.lin1(z))\n",
-    "        return self.lin2(z)\n",
+    "    def forward(self, x, edge_index):\n",
+    "        node_emb = self.gcn(x, edge_index)\n",
+    "        edge_emb = torch.cat([\n",
+    "            node_emb[edge_index[0]],\n",
+    "            node_emb[edge_index[1]]\n",
+    "        ], dim=1)\n",
+    "        return self.mlp(edge_emb)   # logits por classe para cada aresta\n",
     "\n",
     "# -----------------------------\n",
-    "# 2. Carregar Pesos + Artefatos\n",
+    "# 2. Carregar Pesos + Metadados\n",
     "# -----------------------------\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "\n",
-    "ckpt_gcn = \"../models/gcn_state.pt\"\n",
-    "ckpt_pred = \"../models/predictor_state.pt\"\n",
-    "ckpt_meta = \"../models/meta.pt\"\n",
+    "ckpt_model = \"../models/gcn_state.pt\"     \n",
+    "ckpt_meta  = \"../models/meta.pt\"\n",
     "ckpt_graph = \"../models/graph_artifacts.pt\"\n",
     "\n",
     "# Metadados\n",
     "meta = torch.load(ckpt_meta, map_location=device)\n",
     "\n",
-    "# Reconstrói modelos\n",
-    "gcn_loaded = SimpleGCN(meta[\"num_features\"], meta[\"gcn_hidden\"], meta[\"gcn_out\"]).to(device)\n",
-    "gcn_loaded.load_state_dict(torch.load(ckpt_gcn, map_location=device))\n",
-    "gcn_loaded.eval()\n",
-    "\n",
-    "predictor_loaded = LinkPredictor(meta[\"gcn_out\"], meta[\"pred_hidden\"], meta[\"num_classes\"]).to(device)\n",
-    "predictor_loaded.load_state_dict(torch.load(ckpt_pred, map_location=device))\n",
-    "predictor_loaded.eval()\n",
+    "# Reconstrói modelo\n",
+    "edge_model = EdgeClassifier(meta[\"num_features\"], meta[\"hidden_channels\"], meta[\"num_classes\"]).to(device)\n",
+    "edge_model.load_state_dict(torch.load(ckpt_model, map_location=device))\n",
+    "edge_model.eval()\n",
     "\n",
     "# Carrega artefatos do grafo (x e edge_index)\n",
     "graph_arts = torch.load(ckpt_graph, map_location=device)\n",
     "x = graph_arts[\"x\"].to(device)\n",
-    "edge_index = graph_arts[\"adj_norm\"].to(device)\n",
+    "edge_index = graph_arts[\"edge_index\"].to(device)\n",
     "\n",
     "# -----------------------------\n",
     "# 3. Função de Inferência\n",
     "# -----------------------------\n",
-    "idx2label = {0: \"baixa\", 1: \"media\", 2: \"alta\"}\n",
-    "\n",
     "@torch.no_grad()\n",
-    "def classify_edges(edge_list):\n",
-    "    # embeddings dos nós\n",
-    "    z = gcn_loaded(x, edge_index)\n",
-    "\n",
-    "    i = torch.tensor([u for (u, _) in edge_list], device=z.device)\n",
-    "    j = torch.tensor([v for (_, v) in edge_list], device=z.device)\n",
-    "\n",
-    "    # logits → aplica softmax para virar distribuição de probabilidades\n",
-    "    logits = predictor_loaded(z[i], z[j])\n",
-    "    probs = torch.softmax(logits, dim=-1)\n",
+    "def predict_edges(edge_list):\n",
+    "    \"\"\"\n",
+    "    edge_list: lista de arestas [(u,v), (x,y), ...]\n",
+    "    \"\"\"\n",
+    "    logits_all = edge_model(x, edge_index)      # [num_edges, num_classes]\n",
+    "    probs_all = F.softmax(logits_all, dim=1)    # probabilidades\n",
+    "    preds_all = probs_all.argmax(dim=1)\n",
     "\n",
     "    results = []\n",
-    "    for (u, v), p in zip(edge_list, probs):\n",
-    "        pred_idx = p.argmax().item()\n",
+    "    for (u, v) in edge_list:\n",
+    "        # procura tanto (u,v) quanto (v,u)\n",
+    "        mask = (((edge_index[0] == u) & (edge_index[1] == v)) |\n",
+    "                ((edge_index[0] == v) & (edge_index[1] == u))).nonzero(as_tuple=True)[0]\n",
+    "\n",
+    "        if mask.numel() == 0:\n",
+    "            results.append({\n",
+    "                \"edge\": (u, v),\n",
+    "                \"error\": \"Aresta não encontrada no grafo\"\n",
+    "            })\n",
+    "            continue\n",
+    "\n",
+    "        idx = mask[0].item()  # pega o primeiro índice correspondente\n",
     "        results.append({\n",
-    "            \"src\": u,\n",
-    "            \"dst\": v,\n",
-    "            \"pred_label\": idx2label[pred_idx],\n",
-    "            \"probs\": {idx2label[k]: float(p[k]) for k in range(len(p))}\n",
+    "            \"edge\": (u, v),\n",
+    "            \"pred_class\": int(preds_all[idx].cpu()),\n",
+    "            \"probs\": probs_all[idx].cpu().numpy().tolist()\n",
     "        })\n",
     "    return results\n",
+    "\n",
     "\n",
     "# -----------------------------\n",
     "# 4. Exemplo de Uso\n",
     "# -----------------------------\n",
-    "pares = [(0, 42), (10, 77), (23, 59)]\n",
-    "outputs = classify_edges(pares)\n",
+    "arestas = [(2582, 0), (2, 1), (652, 1)]\n",
+    "preds = predict_edges(arestas)\n",
     "\n",
-    "for o in outputs:\n",
-    "    print(f\"Aresta ({o['src']}, {o['dst']}): Classe prevista = {o['pred_label']}, Probs = {o['probs']}\")"
+    "for r in preds:\n",
+    "    if \"error\" in r:\n",
+    "        print(f\"Aresta {r['edge']} -> {r['error']}\")\n",
+    "    else:\n",
+    "        print(f\"Aresta {r['edge']} -> Classe prevista: {r['pred_class']} | Probs: {r['probs']}\")\n"
    ]
->>>>>>> 0a56692372943491d14aaee8431daabe784e1b20
   }
  ],
  "metadata": {
   "kernelspec": {
-<<<<<<< HEAD
    "display_name": "venv (3.12.4)",
-=======
-   "display_name": "venv (3.9.6)",
->>>>>>> 0a56692372943491d14aaee8431daabe784e1b20
    "language": "python",
    "name": "python3"
   },
   "language_info": {
-<<<<<<< HEAD
-   "name": "python",
-   "version": "3.12.4"
-=======
    "codemirror_mode": {
     "name": "ipython",
     "version": 3
@@ -150,8 +146,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
->>>>>>> 0a56692372943491d14aaee8431daabe784e1b20
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
