--- a/src/inference.ipynb
+++ b/src/inference.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "f9f85c10",
    "metadata": {},
    "outputs": [
@@ -10,9 +10,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Aresta (2582, 0) -> Classe prevista: 0 | Probs: [0.5618619322776794, 0.43813806772232056]\n",
-      "Aresta (2, 1) -> Classe prevista: 1 | Probs: [0.4427374005317688, 0.5572625994682312]\n",
-      "Aresta (652, 1) -> Classe prevista: 1 | Probs: [0.17754071950912476, 0.82245934009552]\n"
+      "Aresta (2582, 0) -> Classe prevista: 1 | Probs: [0.24018479883670807, 0.7598152160644531]\n",
+      "Aresta (2, 1) -> Classe prevista: 0 | Probs: [0.9403064250946045, 0.05969354882836342]\n",
+      "Aresta (652, 1) -> Classe prevista: 0 | Probs: [0.8687646985054016, 0.13123531639575958]\n"
      ]
     }
    ],
@@ -92,11 +92,10 @@
     "    \"\"\"\n",
     "    logits_all = edge_model(x, edge_index)      # [num_edges, num_classes]\n",
     "    probs_all = F.softmax(logits_all, dim=1)    # probabilidades\n",
-    "    preds_all = probs_all.argmax(dim=1)\n",
+    "    preds_all = probs_all.argmax(dim=1)         # classes previstas\n",
     "\n",
     "    results = []\n",
     "    for (u, v) in edge_list:\n",
-    "        # procura tanto (u,v) quanto (v,u)\n",
     "        mask = (((edge_index[0] == u) & (edge_index[1] == v)) |\n",
     "                ((edge_index[0] == v) & (edge_index[1] == u))).nonzero(as_tuple=True)[0]\n",
     "\n",
@@ -107,14 +106,13 @@
     "            })\n",
     "            continue\n",
     "\n",
-    "        idx = mask[0].item()  # pega o primeiro índice correspondente\n",
+    "        idx = mask[0].item()\n",
     "        results.append({\n",
     "            \"edge\": (u, v),\n",
     "            \"pred_class\": int(preds_all[idx].cpu()),\n",
     "            \"probs\": probs_all[idx].cpu().numpy().tolist()\n",
     "        })\n",
     "    return results\n",
-    "\n",
     "\n",
     "# -----------------------------\n",
     "# 4. Exemplo de Uso\n",
@@ -123,10 +121,7 @@
     "preds = predict_edges(arestas)\n",
     "\n",
     "for r in preds:\n",
-    "    if \"error\" in r:\n",
-    "        print(f\"Aresta {r['edge']} -> {r['error']}\")\n",
-    "    else:\n",
-    "        print(f\"Aresta {r['edge']} -> Classe prevista: {r['pred_class']} | Probs: {r['probs']}\")\n"
+    "    print(f\"Aresta {r['edge']} -> Classe prevista: {r['pred_class']} | Probs: {r['probs']}\")"
    ]
   }
  ],
